[tool.poetry]
name = "pixel_dl"
version = "0.1.0"
description = "Get direct download links for Pixel experience rom"
authors = ["Leorio Paradinight <62891774+code-rgb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
pyppeteer = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
